--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.11"
   }
 }
